# chess

./: Cargo.toml  README.md
chess_core/: Cargo.toml
chess_core/src/: config.rs  game.rs  lib.rs
cli/: Cargo.toml
cli/src/: lib.rs
src/: board.rs  cli.rs  game.rs  main.rs
src/tests/: mod.rs  pawn.rs
