[package]
name = "chess"
version = "0.1.0"
authors = ["akida <47895118+Akida31@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["cli"]

[workspace]
members = ["chess_core", "cli"]

[dependencies]
cli = { path = "cli" , optional = true}
